# usb

./: .gitcloned  CMakeLists.txt  cmake-config.h.in  configure.ac  usb-config.cmake
examples/: Makefile.am
libusb/: Makefile.am  core.c  io.c  libusb.h  libusbi.h
libusb/hotplug/: libudev.c
libusb/os/: darwin_usb.c  linux_usbfs.c
